...
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:background="@drawable/button_righty"
                    app:srcCompat="@drawable/arrow"
                    android:scaleType="fitCenter"
                    android:id="@+id/submitButton"
                    android:onClick="@{() -> searchModel.search()}"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/searchField"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
...
