<resources>
    <string name="app_name">Testair</string>

    <string name="submit_field_hint">ENTER CITY NAME</string>
    <string name="degree_current">%d°</string>
    <string name="degree_maxmin">%d°/ %d°</string>
    <string name="search_day">%s / %s</string>
    <string name="icon_service">http://openweathermap.org/img/w/%s.png</string>
    <string name="invalid_input">Invalid input</string>
    <string name="failed">Failed to fetch</string>
</resources>
